--- a/.env
+++ b/.env
@@ -11,6 +11,6 @@ LOG_LEVEL=debug
 DB_DRIVER=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=c3architecture4php
-DB_USERNAME=root
+DB_NAME=c3architecture4php
+DB_USER=root
 DB_PASSWORD=
