--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
   },
   "require": {
     "ext-mysqli": "*",
-    "vlucas/phpdotenv": "^5.6"
+    "vlucas/phpdotenv": "^5.6",
+    "ext-pdo": "*"
   }
 }
